--- a/vacinition/theme/blog.html
+++ b/vacinition/theme/blog.html
@@ -179,7 +179,7 @@ FACEBOOK: https://www.facebook.com/themefisher
           <a class="nav-link" href="team.html">Team</a>
         </li>
         <li class="nav-item @@appointment">
-          <a class="nav-link" href="appointment.html">Appointment</a>
+          <!-- <a class="nav-link" href="appointment.html">Appointment</a> -->
         </li>
         <li class="nav-item dropdown active">
           <a class="nav-link dropdown-toggle" href="#!" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Blogs</a>
