--- a/vacinition/theme/contact.html
+++ b/vacinition/theme/contact.html
@@ -18,7 +18,6 @@ WEBSITE: https://themefisher.com
 TWITTER: https://twitter.com/themefisher
 FACEBOOK: https://www.facebook.com/themefisher
 -->
-
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
@@ -56,9 +55,10 @@ FACEBOOK: https://www.facebook.com/themefisher
   
   <!--Favicon-->
   <link rel="icon" href="images/favicon.png" type="image/x-icon">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
 </head>
-
 
 <body>
   <div class="page-wrapper">
@@ -144,13 +144,37 @@ FACEBOOK: https://www.facebook.com/themefisher
             </li>
           </ul>
           <div class="link-btn text-center text-lg-right">
-            <a href="contact.html" class="btn-style-one">Appoinment</a>
-          </div>
+            <div class="link-btn text-center text-lg-right">
+              <!-- Button trigger modal -->
+  <button type="button" class="btn-style-one" data-bs-toggle="modal" data-bs-target="#exampleModal">
+   Appointment
+  </button>
+  
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <p>login yourself as a parent or hospital</p>
+         <a href="login.php" class="btn btn-style-one">hospital</a>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
         </div>
       </div>
     </div>
   </div>
-</section>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 <!--Header Upper-->
 
 
@@ -164,7 +188,7 @@ FACEBOOK: https://www.facebook.com/themefisher
   
     <div class="collapse navbar-collapse" id="navbarLinks">
       <ul class="navbar-nav">
-        <li class="nav-item active">
+        <li class="nav-item ">
           <a class="nav-link" href="index.html">Home</a>
         </li>
         <li class="nav-item @@about">
@@ -180,11 +204,11 @@ FACEBOOK: https://www.facebook.com/themefisher
           <a class="nav-link" href="team.html">Team</a>
         </li>
         <li class="nav-item @@appointment">
-          <a class="nav-link" href="appointment.html">Appointment</a>
+          <!-- <a class="nav-link" href="appointment.html">Appointment</a> -->
         </li>
         
         <li class="nav-item @@contact">
-          <a class="nav-link" href="contact.html">Contact</a>
+          <a class="nav-link" href="contact.html" >Contact</a>
         </li>
       </ul>
     
@@ -289,6 +313,7 @@ FACEBOOK: https://www.facebook.com/themefisher
 </section>
 <!--====  End of Google Map  ====-->
 
+
 <!--footer-main-->
 <footer class="footer-main">
   <div class="footer-top">
@@ -297,8 +322,12 @@ FACEBOOK: https://www.facebook.com/themefisher
         <div class="col-lg-4 mb-5 mb-lg-0">
           <div class="about-widget">
             <div class="footer-logo">
-              <h1>Social media handles</h1>
-              <br>
+              <figure>
+                <a href="index.html">
+                  <img loading="lazy" class="img-fluid" src="images/logo-2.png" alt="medic">
+                </a>
+              </figure>
+            </div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, temporibus?</p>
             <ul class="location-link">
               <li class="item">
