--- a/vacinition/theme/service.html
+++ b/vacinition/theme/service.html
@@ -56,6 +56,8 @@ FACEBOOK: https://www.facebook.com/themefisher
   
   <!--Favicon-->
   <link rel="icon" href="images/favicon.png" type="image/x-icon">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
 </head>
 
@@ -144,13 +146,37 @@ FACEBOOK: https://www.facebook.com/themefisher
             </li>
           </ul>
           <div class="link-btn text-center text-lg-right">
-            <a href="contact.html" class="btn-style-one">Appoinment</a>
-          </div>
+            <div class="link-btn text-center text-lg-right">
+              <!-- Button trigger modal -->
+  <button type="button" class="btn-style-one" data-bs-toggle="modal" data-bs-target="#exampleModal">
+    Appointment
+  </button>
+  
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <p>login yourself as a parent or hospital</p>
+         <a href="login.php" class="btn btn-style-one">hospital</a>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
         </div>
       </div>
     </div>
   </div>
-</section>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 <!--Header Upper-->
 
 
@@ -163,14 +189,14 @@ FACEBOOK: https://www.facebook.com/themefisher
   
     <div class="collapse navbar-collapse" id="navbarLinks">
       <ul class="navbar-nav">
-        <li class="nav-item active">
+        <li class="nav-item ">
           <a class="nav-link" href="index.html">Home</a>
         </li>
         <li class="nav-item @@about">
           <a class="nav-link" href="about.html">About</a>
         </li>
-        <li class="nav-item @@service">
-          <a class="nav-link" href="service.html">Service</a>
+        <li class="nav-item @@service ">
+          <a class="nav-link" href="service.html" active>Service</a>
         </li>
         <li class="nav-item @@gallery">
           <a class="nav-link" href="gallery.html">Vaccination</a>
@@ -179,7 +205,7 @@ FACEBOOK: https://www.facebook.com/themefisher
           <a class="nav-link" href="team.html">Team</a>
         </li>
         <li class="nav-item @@appointment">
-          <a class="nav-link" href="appointment.html">Appointment</a>
+          <!-- <a class="nav-link" href="appointment.html">Appointment</a> -->
         </li>
         
         <li class="nav-item @@contact">
